# sdk-rust

./: Cargo.toml
examples/: llama2c.rs  simpletensor.rs
src/: lib.rs  nn.rs
